# openfood

./: README.md  pyproject.toml  requirements.txt
argo-workflow/: workflow.yaml  workflow_gpu.yaml
bash_command/: command.sh  install_requirement_on_jupyter_worker.sh  install_requirement_on_tensor_worker.sh  run_fetch_model.sh  train_model_command.sh
bert_test/: sentiment_test.py
data/: test.csv  vocab.txt
docker-img/cpu_worker/: Dockerfile
docker-img/gpu_worker/: Dockerfile
fetch_model/: fetch_model_by_version.py
requirements/: jupyter_requirements.txt  tensor_requirements.txt
siamesenetwork/: __init__.py  config.yml  fetch_model.py  fetch_model_by_version.py  main.py  run_pretrained_embedding.py  run_pretrained_embedding_with_mlflow.py  siamesePreTrainedEmbeddings.py  siameseUtils.py  test.py  utils.py
