[tool.poetry]
name = "openfood"
version = "0.1.0"
description = ""
authors = ["pengfei <liu.pengfei@hotmail.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.7.1"
boto3 = "^1.18.8"
pandas = "^1.3.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
